--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>随风而行之青衫磊落险峰行JSDemo</title>
 </head>
+
 <body>
-<canvas id="myCanvas" width="800" height="600" style="border: 1px solid black">
-    你的浏览器还不支持哦
-</canvas>
+    <canvas id="myCanvas" width="800" height="600" style="border: 1px solid black">你的浏览器还不支持哦</canvas>
 </body>
+
 <script src="BLFLib.js"></script>
 <script>
-    var canvas=document.getElementById("myCanvas");
-    var context =canvas.getContext('2d');
+    var canvas = document.getElementById("myCanvas");
+    var context = canvas.getContext('2d');
     var render = new BLFRender(context);
     var rect = BLFRectSprite();
     rect.render(render);
 </script>
+
 </html>
