--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <canvas id="myCanvas" width="800" height="600" style="border: 1px solid black">你的浏览器还不支持哦</canvas>
 </body>
 
-<script src="BLFLib.js"></script>
+<script src="./BLFLib.js"></script>
 <script>
     var canvas = document.getElementById("myCanvas");
     var context = canvas.getContext('2d');
