--- a/renderSurface.html
+++ b/renderSurface.html
@@ -3,17 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>随风而行之青衫磊落险峰行JSDemo</title>
+    <title>随风而行之青衫磊落险峰行JSDemo-RenderSurface</title>
     <script src="BLFLib.js"></script>
 </head>
 
 <body>
+
+    <!--
+    <canvas id="myCanvas" style="border: 1px solid black">你的浏览器还不支持哦</canvas>
+    -->
+
     <canvas id="myCanvas" width="800" height="600" style="border: 1px solid black">你的浏览器还不支持哦</canvas>
+
     <script>
-        let canvas = document.getElementById("myCanvas");
+        var canvas = document.getElementById("myCanvas");
         var context = canvas.getContext('2d');
         var render = new BLFRender(context);
-        var rect = BLFBaseSprite();
+        var rect = BLFRectSprite();
         rect.render(render);
     </script>
 </body>
