Signed-off-by: jackyblf <47178234@qq.com>

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>随风而行之青衫磊落险峰行JSDemo</title>
+    <script src="https://cdn.jsdelivr.net/jsface/2.4.9/jsface.min.js"></script>
     <script src="BLFLib.js"></script>
 </head>
 
