--- a/spritesystemtest.html
+++ b/spritesystemtest.html
@@ -10,6 +10,9 @@
 <body>
     <canvas id="myCanvas" width="800" height="600" style="border: 1px solid black">你的浏览器还不支持哦</canvas>
     <script>
+        //if (window.DeviceOrientationEvent)
+        //alert("support");
+
         let canvas = document.getElementById("myCanvas");
         let context = canvas.getContext('2d');
         let engine = new BLFEngine2D(context);
